--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,8 +5,10 @@ import ThemeIcon from './ThemeIcon.astro';
 ---
 <header>
   <nav>
-    <Hamburger />
-    <ThemeIcon />
-    <Navigation />
+    <div class="nav-container">
+      <Hamburger />
+      <Navigation />
+      <ThemeIcon />
+    </div>
   </nav>
 </header>
