--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -8,11 +8,11 @@
   </button>
   
   <style>
-    .sun { fill: black; }
-    .moon { fill: transparent; }
+    .sun { fill: transparent; }
+    .moon { fill: black; }
   
-    :global(.dark) .sun { fill: transparent; }
-    :global(.dark) .moon { fill: white; }
+    :global(.dark) .sun { fill: white; }
+    :global(.dark) .moon { fill: transparent; }
   </style>
   
   <script is:inline>
