--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,8 +8,11 @@ const username = "withastro";
 <style>
 footer {
     display: flex;
+    justify-content: center;
     gap: 1rem;
-    margin-top: 2rem;
+    padding: 0.5rem 0;
+    background-color: var(--header-bg);
+    box-shadow: 0 -2px 4px var(--color-shadow);
 }
 </style>
   
@@ -18,5 +21,5 @@ footer {
     <Social platform="twitter" username="astrodotbuild" />
     <Social platform="github" username="withastro" />
     <Social platform="youtube" username="astrodotbuild" />
-  </footer>
+</footer>
   
