--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,11 +3,11 @@ import { getCollection } from "astro:content";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import BlogPost from "../components/BlogPost.astro";
 
-const pageTitle = "My Astro Learning Blog";
+const pageTitle = "博客日志";
 const allPosts = await getCollection("blog");
 ---
 <BaseLayout pageTitle={pageTitle}>
-  <p>This is where I will post about my journey learning Astro.</p>
+  <p>Busy living or busy dying.</p>
   <ul>
     {
       allPosts.map((post) => (
