--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Greeting from '../components/Greeting';
-const pageTitle = "Home Page";
+const pageTitle ="侯金冰";
 ---
 <BaseLayout pageTitle={pageTitle}>
-  <h2>My awesome blog subtitle</h2>
-  <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
+  <h2>像哲学家一样思考，像工匠一样行动</h2>
+  <Greeting client:load messages={["你好", "Hello", "Hallo", "Hola", "Bonjour", "Ciao", "こんにちは", "안녕하세요", "Здравствуйте"]} />
 </BaseLayout>
